cluster/manifests/media/jellyseerr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyseerr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: jellyseerr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jellyseerr
    spec:
      containers:
      - image: fallenbagel/jellyseerr:develop
        name: jellyseerr
        ports:
        - containerPort: 5055
          name: http
        volumeMounts:
        - mountPath: /app/config
          name: config
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: jellyseerr-config
