cluster/manifests/media/lidarr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lidarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: lidarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: lidarr
    spec:
      containers:
      - env:
        - name: PUID
          value: "0"
        - name: PGID
          value: "1001"
        - name: TZ
          value: Europe/Copenhagen
        image: linuxserver/lidarr:3.1.6-nightly
        name: lidarr
        ports:
        - containerPort: 8686
          name: http
        volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /data
          name: media
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: lidarr-config
      - name: media
        persistentVolumeClaim:
          claimName: mediastack
