cluster/manifests/media/radarr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: radarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: radarr
    spec:
      containers:
      - env:
        - name: PUID
          value: "0"
        - name: PGID
          value: "1001"
        - name: TZ
          value: Europe/Copenhagen
        image: linuxserver/radarr:6.4.4
        name: radarr
        ports:
        - containerPort: 7878
          name: http
        volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /data
          name: media
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: radarr-config
      - name: media
        persistentVolumeClaim:
          claimName: mediastack
