cluster/manifests/media/readarr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: readarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: readarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: readarr
    spec:
      containers:
      - env:
        - name: PUID
          value: "0"
        - name: PGID
          value: "1001"
        - name: TZ
          value: Europe/Copenhagen
        image: linuxserver/readarr:0.4.19-nightly
        name: readarr
        ports:
        - containerPort: 8787
          name: http
        volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /data
          name: media
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: readarr-config
      - name: media
        persistentVolumeClaim:
          claimName: mediastack
