cluster/manifests/media/readarr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: readarr
  namespace: media
spec:
  ports:
  - port: 8787
    targetPort: 8787
  selector:
    app.kubernetes.io/name: readarr
