cluster/manifests/media/flaresolverr-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: flaresolverr
  namespace: media
spec:
  entryPoints:
  - privateweb
  - privatesecure
  - wgweb
  - wgsecure
  routes:
  - kind: Rule
    match: Host(`flaresolverr.lan.ftzmlab.xyz`)
    services:
    - name: flaresolverr
      port: 8191
  tls: {}
