cluster/manifests/media/prowlarr-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prowlarr
  namespace: media
spec:
  entryPoints:
  - privateweb
  - privatesecure
  - wgweb
  - wgsecure
  routes:
  - kind: Rule
    match: Host(`prowlarr.lan.ftzmlab.xyz`)
    services:
    - name: prowlarr
      port: 9696
  tls: {}
