cluster/manifests/media/readarr-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: readarr
  namespace: media
spec:
  entryPoints:
  - privateweb
  - privatesecure
  - wgweb
  - wgsecure
  routes:
  - kind: Rule
    match: Host(`readarr.lan.ftzmlab.xyz`)
    services:
    - name: readarr
      port: 8787
  tls: {}
